--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -267,7 +267,7 @@ a:hover {
   aspect-ratio: 1;
   background-color: var(--clr-gray-300);
   border-radius: 50%;
-  
+
 }
 .accordion-item .answer {
   color: var(--clr-gray-800);
@@ -282,9 +282,11 @@ a:hover {
 .open .answer {
   grid-template-rows: 1fr;
   padding: 1rem;
+  
 }
-.open .accordion-item button {
-
+.open button {
+  transform: rotate(180deg);
+  background-color: var(--clr-primary);
 }
 .expandable {
   min-height: 0px;
