--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1095,7 +1095,7 @@ footer p {
 
 /* CONTACT SECTION */
 .contact-section {
-    background: var(--clr-gray-100); 
+    background: linear-gradient(to bottom, var(--clr-gray-100) 80%, white 50%);
   }
 .contact-container {
   display: grid;
@@ -1114,6 +1114,7 @@ footer p {
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  margin-bottom: 4rem;
 }
 .contact-card {
   display: flex;
@@ -1128,9 +1129,11 @@ footer p {
     font-size: 22px;
     font-weight: 800;
     color: var(--clr-gray-900);
+    margin-bottom: .8rem;
   }
   p {
     color: var(--clr-gray-800);
+    margin-bottom: .8rem;
   }
   a p {
     color: var(--clr-primary);
@@ -1153,24 +1156,26 @@ footer p {
 .contact-section-form {
   background-color: #fff;
   border-radius: 0.3rem;
-  padding: 2rem;
+  padding: 4rem;
   box-shadow: 0 0 5px 5px #0000000f;
+  width: 80%;
   
 
   label {
     display: block;
     color: var(--clr-gray-900);
     font-weight: 600;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
   }
   h3 {
     font-size: 25px;
-    margin-bottom: 2rem;
+    margin-bottom: 2.5rem;
   }
   button {
-    margin-top: 3rem;
+    margin-top: 8rem;
     width: 100%;
     border: transparent;
+    
   }
 }
 .contact-input {
@@ -1179,7 +1184,7 @@ footer p {
     padding: 0.5rem;
     border: 1px solid #D4D7E5;
     border-radius: 0.3rem;
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
 }
 
 @media (width >= 768px){
@@ -1191,16 +1196,20 @@ footer p {
     font-size: 40px;
     margin-bottom: 2rem;
     text-align: left;
-    grid-area: contact-us;
+    /* grid-area: contact-us; */
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
   }
 
   .contact-container{
     display: grid;
     place-items: start;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 4fr;
-    grid-template-areas:    "contact-us        contact-section-form "
-                        "contact-alternatives  contact-section-form";
+    grid-template-rows: 1fr 4fr 1fr;
+
+    /* grid-template-areas:    "contact-us        contact-section-form "
+                        "contact-alternatives  contact-section-form"; */
+    
   }
 
   .contact-card-content {
@@ -1209,15 +1218,22 @@ footer p {
     }
   }
   .contact-section-form {
-    grid-area: contact-section-form;
+    width: 90%;
+    height: 100%;
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+    /* max-height: 100%; */
+    /* grid-area: contact-section-form; */
     h3 {
       font-size: 32px;
     }
   }
   .contact-alternatives {
-    grid-area: contact-alternatives;
+    /* grid-area: contact-alternatives; */
     max-width: 60%;
     gap: 4rem;
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
   }
 }
 
