--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1167,6 +1167,7 @@ footer p {
     color: var(--clr-gray-900);
     font-weight: 600;
     margin-bottom: 1rem;
+    margin-top: 2rem;
   }
   h3 {
     font-size: 25px;
@@ -1182,10 +1183,29 @@ footer p {
       font-size: 1rem;
       padding: 0.5rem;
       border: 1px solid #D4D7E5;
-      border-radius: 0.3rem;
-      margin-bottom: 2rem;
+      border-radius: 0.3rem;   
+  }
+  span {
+    color: red;
+    font-size: small;
+    /* margin-bottom: 2rem; */
   }
 }
+.info-box {
+  display: grid;
+  place-items: center;
+  gap: 2rem;
+  background-color: #fff;
+  border-radius: 0.3rem;
+  box-shadow: 0 0 5px 5px rgba(0, 0, 0, 0.1);
+  padding: 40px;
+
+  button {
+    width: 100%;
+    border: transparent;
+  }   
+}
+
 
 @media (width >= 768px){
 
