validering,bekräftelse och post till api funkar på subscribe

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -1010,6 +1010,11 @@ footer p {
   display: flex;
   flex-direction: column;
   justify-content: center;
+
+  span {
+    color: red;
+    font-size: small;
+  }
 }
 
 .subscribe {
