--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -53,6 +53,7 @@ body {
   font-weight: 400;
   font-style: normal;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 .btn-primary {
@@ -487,7 +488,9 @@ footer p {
   line-height: 160%;
   text-align: center;
 }
-
+header {
+  position: relative;
+}
 .header-container {
   display: grid;
   grid-template-columns: 1fr auto auto;
@@ -575,7 +578,39 @@ footer p {
   background-color: transparent;
   border: none;
   font-size: 2rem;
+  cursor: pointer;
 }
+.btn-mobile[aria-expanded="true"] ~ .mobile-menu {
+  transform: translateX(0);
+}
+.mobile-menu {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-right: 1rem;
+  position: absolute;
+  top: 100%;
+  background-color: #fff;
+  
+  width: 100%;
+  z-index: 1000;
+  right: 0;
+
+  transform: translateX(100%);
+}
+.mobile-menu-link {
+  color: var(--clr-gray-900);
+  font-weight: 800;
+  display: inline-block;
+  padding: 2rem;
+  
+
+  :hover {
+    color: var(--clr-primary);
+  }
+}
+
 
 .dark #logo .silicon-logo-darkmode {
   display: block;
