contact-länk tillagd i header och useContext på feedback-card färdigt

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -648,7 +648,7 @@ header {
 @media (width >= 1400px) {
   .header-container {
     display: grid;
-    grid-template-columns: auto 1fr auto auto;
+    grid-template-columns: auto auto 1fr auto auto;
   }
   .navbar {
     display: flex;
